r152 (13. 05. 2023):
Optimized Timer Trackers if both tracker and waypoint are visible
No Mercy: Disabled Assault Delay and Assault Tracker when all players are in the elevator
VR: Fixed crashes related to "Assault Delay" and "Assault Time" trackers

r151 (12. 05. 2023):
Cook Off: Fixed a crash after putting first ingredient

r150 (11. 05. 2023):
Code reorganization
Fixed an issue where random time is increased everytime the tracker/waypoint is created
Big Oil Day 2: Ammo bags outside of playable area are ignored
Shacklethorne Auction: Fixed an issue where heli icon is bigger than usual
VR: Possible fix for a load crash

r149 (04. 05. 2023):
The Biker Heist: Fixed an issue where ammo and grenades are counted, but the bunker is not open
Hoxton Breakout Day 2: Fixed an issue where ammo and grenades are counted, but armory is not open

r148 (01. 05. 2023):
Fixed an issue where waypoints are not properly aligned and are on default vector position (0, 0, 0) on clients

r147 (30. 04. 2023):
Fixed a crash in Wallet Gui object

r146 (24. 04. 2023):
Added "Show Assault Duration Tracker" option

r145 (21. 04. 2023):
Added option to change colors
Fixed an issue where "ACHIEVEMENT FAILED" popup do not show on some achievements

r144 (11. 04. 2023):
Added options "X offset (VR)" and "Y offset (VR)" for buffs

r143 (09. 04. 2023):
Added options "X offset (VR)" and "Y offset (VR)"
Fixed a crash in waypoints

r142 (07. 04. 2023):
Fixed issues with "Tracker Alignment" option in VR

r141 (06. 04. 2023):
Added Unseen Strike (Initial Delay) buff
Fixed an issue where Ex-President buff is visible when the perk is not equipped

r140 (04. 04. 2023):
Added Ex-President buffs
Added option "VR Tracker Alignment"

r139 (30. 03. 2023):
XP Tracker: Fixed a crash when difficulty multiplier is nil

r138 (23. 03. 2023):
Updated to U235

r137 (13. 03. 2023):
Added option "Show gained XP in Mission Briefing only"

r136 (10. 03. 2023):