@@ -49,21 +49,17 @@ local original =
 
 local ignored_pos = {}
 function AmmoBagBase.SetIgnoredPos(pos)
-    ignored_pos = pos
+    for _, _pos in ipairs(pos) do
+        ignored_pos[tostring(_pos)] = true
+    end
 end
 
 function AmmoBagBase:init(unit, ...)
     original.init(self, unit, ...)
     self._ehi_key = tostring(unit:key())
     self._offset = 0
-    if next(ignored_pos) then
-        local pos = tostring(unit:position())
-        for _, _pos in ipairs(ignored_pos) do
-            if pos == tostring(_pos) then
-                self._ignore = true
-                break
-            end
-        end
+    if next(ignored_pos) and ignored_pos[tostring(unit:position())] then
+        self._ignore = true
     end
 end
 
