@@ -1,3 +1,11 @@
+r153 (15. 05. 2023):
+Added option "Show Waypoints For Heist Elements"
+Fixed a log spam when endless assault starts (client only)
+Fixed "Artillery Barrage" achievement not tracked correctly
+Rats Day 2: Fixed a log spam when the deal is interrupted by police
+Rats Day 2: Fixed an issue where Loot Counter is showing 0 bags as maximum
+Rats Day 3: Fixed an issue where Loot Counter is showing 0 bags as maximum
+
 r152 (13. 05. 2023):
 Optimized Timer Trackers if both tracker and waypoint are visible
 No Mercy: Disabled Assault Delay and Assault Tracker when all players are in the elevator
